<resources>
    <string name="app_name">LearnToCook</string>
    <string name="noAccount">Don\'t Have an account? Sign up</string>
    <string name="backtoLogin">Already have an account? Sign in</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="name">Enter your name</string>
    <string name="signup">Sign Up</string>
    <string name="password">Enter your password</string>
    <string name="email">Enter your email or username</string>
    <string name="welcome">Get Started with LearnToCook</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="search_hint">Search Recipes</string>
    <string name="preferences">My Preferences</string>
    <string name="ingredients">My Ingredients</string>
    <string name="nav_hamburger_desc">Open navigation</string>
    <string name="back">Back</string>
    <string name="recipe_image">Recipe image</string>
    <string name="create_blog_post">Create Blog Post</string>
    <string name="post">Post</string>
    <string name="description_hint">Recipe Description</string>
    <string name="ingredients_hint">Ingredients....</string>
    <string name="instructions_hint">Instructions</string>
    <string name="cuisine_hint">Cuisine Type</string>
    <string name="upload_image">Upload Image</string>
    <string name="follower_count_format">%d Followers</string>
    <string name="chef_profile_image">Chef profile image</string>


</resources>